# Law-School-Application-Status

./: .envrc_example  .gitignore  condense_screenshots.py  pyproject.toml  readme.org  schools_example.toml  status_check.py
